--- a/recipe_app/chefs/static/registration/css/styles.css
+++ b/recipe_app/chefs/static/registration/css/styles.css
@@ -62,13 +62,26 @@ form {
 
 
 .profile-image-container {
-    width: 90px;
-    height: 90px;
+    width: 100%;
+    height: 100%;
+    position: relative;
     background-color: var(--element-color-2);
     color: var(--icon-color);
     border-radius: 999px;
     display: flex;
-    align-items:
-    center;
+    align-items: center;
     justify-content: center;
+    aspect-ratio: 1 / 1;
+}
+
+
+.profile-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    width: 100%;
+    border-radius: 999px; 
 }
