--- a/recipe_app/recipes/templates/recipes/detail.html
+++ b/recipe_app/recipes/templates/recipes/detail.html
@@ -290,7 +290,7 @@
             </div>
             {% endif %}
             {% if user.is_authenticated %}
-                {% if recipe.author %}
+                {% if request.user == recipe.author %}
                 <div style="display: flex; justify-content: center; align-items: center; gap: 0.4rem;">
                     <a href="{% url 'chefs:profile' recipe.author %}" class="panel-icon-overlay" id="recipe-author-button" title="Chef aufrufen">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-user"><path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg>
