--- a/recipe_app/chefs/templates/chefs/profile.html
+++ b/recipe_app/chefs/templates/chefs/profile.html
@@ -31,12 +31,15 @@
         </div>
     </div>
     {% if request.user.id == user_id %}
-        <button class="panel-icon-overlay" id="image-upload-button">
+        <button class="panel-icon-overlay" id="image-upload-button" style="margin-top: 0.4rem; margin-bottom: 0.4rem;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-image-up"><path d="M10.3 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10l-3.1-3.1a2 2 0 0 0-2.814.014L6 21"/><path d="m14 19.5 3-3 3 3"/><path d="M17 22v-5.5"/><circle cx="9" cy="9" r="2"/></svg>
+            <div style="font-size: 1.2rem; margin-left: 0.4rem;">
             {% if chef.image %}
                 Profilbild ändern
             {% else %}
                 Profilbild hochladen
             {% endif %}
+            </div>
         </button>
     {% endif %}
     <div class="row-content" style="width: 100%; padding: 1rem; flex-direction: column;">
