--- a/recipe_app/recipes/templates/recipes/list.html
+++ b/recipe_app/recipes/templates/recipes/list.html
@@ -38,33 +38,31 @@
                 <div class="card card-clickable preview-card" style="padding: 0.4rem;">
                     <a href="{{ preview.get_absolute_url }}" class="clickable-wrapper">
                         <div class="card-recipe-container">
-                            <div style="display: flex; column-gap: 0.8rem; row-gap: 0.2rem; justify-content: left; align-items: center; {% if preview.image %} margin-bottom: 0.4rem; {% endif %}">
+                            <div style="display: flex; {% if preview.image %}column-gap: 0.8rem;{% endif %} row-gap: 0.2rem; justify-content: left; align-items: center; {% if preview.image %} margin-bottom: 0.4rem; {% else %} margin-bottom: 0.2rem; {% endif %}">
                                 {% if preview.image %}
-                                    <div class="recipe-image-container" style="width: 60px;">
-                                            <img class="recipe-image" src="{{ preview.image.image.url }}" alt="{{ preview.image.alt_text }}">
+                                    <div class="recipe-image-container" style="width: 65px;">
+                                        <img class="recipe-image" src="{{ preview.image.image.url }}" alt="{{ preview.image.alt_text }}">
                                     </div>
                                 {% endif %}
                                 <div>
-                                    <div class="title" style="margin-bottom: 0.1rem;">{{ preview.title }}</div>
-                                    <div style="font-size: 0.9rem; font-weight: 500; color: indianred; line-height: 1.4rem;">
+                                    <div class="title line-clamp-1" style="margin-bottom: 0.1rem;">{{ preview.title }}</div>
+                                    <div class="line-clamp-1" style="font-size: 0.9rem; font-weight: 500; color: indianred; line-height: 1.4rem; margin-bottom: 0.1rem;">
                                         {{ preview.get_difficulty_display }} • {{ preview.time_total|time_converter}} 
-                                        
+                                    </div>
+                                    <div class="author">
+                                        {% if preview.author %}
+                                            <span>{{ preview.author }}</span>
+                                        {% else %}
+                                            <span>Unbekannt</span>
+                                        {% endif %}
                                     </div>
                                 </div>
                             </div>
-                            <div class="description">{{ preview.description }}</div>
+                            <div class="description line-clamp-2">{{ preview.description }}</div>
                         </div>
                     </a>
-                    <div class="recipe-properties-container">
-                        <div class="author" style="font-size: 1rem;">
-                            {% if preview.author %}
-                                <a href="{% url 'chefs:profile' preview.author %}"> {{preview.author }} </a>
-                            {% else %}
-                                <span>Unbekannt</span>
-                            {% endif %}
-                        </div>
-
-                        <div class="stars" style="display: none;">
+                    <div class="recipe-properties-container">  
+                        <div class="stars" style="display: flex;">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                 <path
                                     d="M12 1.726l2.338 7.196h7.566l-6.121 4.448 2.338 7.196L12 16.118l-6.121 4.448 2.338-7.196L2.096 8.922h7.566z"
