--- a/recipe_app/recipes/templates/recipes/detail.html
+++ b/recipe_app/recipes/templates/recipes/detail.html
@@ -71,6 +71,14 @@
                     <div class="recipe-description">
                         <div style="max-width: 500px; text-align: left"><span>{{ recipe.description }}</span></div>
                     </div>
+                    <div class="panel-icon-overlay" style="padding: 0; margin-top: 1rem; font-size: 1.2rem; gap: 0.4rem;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-user"><path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg>
+                        {% if recipe.author %}
+                            <a href="{% url 'chefs:profile' recipe.author %}"> {{ recipe.author }} </a>
+                        {% else %}
+                            <span>Unbekannt</span>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
         
@@ -150,14 +158,6 @@
                 </div>
             </div>
             <div class="recipe-bottom-panel">
-                <div class="author">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-user"><path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg>
-                    {% if recipe.author %}
-                        <a href="{% url 'chefs:profile' recipe.author %}"> {{ recipe.author }} </a>
-                    {% else %}
-                        <span>Unbekannt</span>
-                    {% endif %}
-                </div>
             </div>
         </div>
     </div>
