fixed follow/unfollow bug pt2

--- a/recipe_app/chefs/templates/chefs/profile.html
+++ b/recipe_app/chefs/templates/chefs/profile.html
@@ -184,8 +184,9 @@
             });
     }
 
-    followButton.addEventListener('click', toggleFollow);
-
+    if (followButton) {
+        followButton.addEventListener('click', toggleFollow);
+    }
 
 </script>
 
